--- a/assets/newyear.html
+++ b/assets/newyear.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New year</title>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="../assets/newyear.css">
 </head>
 <body>
@@ -29,6 +29,12 @@
       <div class="box">
         <h2 id="seconds">00</h2>
         <small>Seconds</small>
+      </div>
+    </div>
+    <div class="container">
+      <div class="content">
+        <i class="fas fa-home"><a href="../home.html"></i></a>
+        <p><a href="../index.html">HOME</a></p>
       </div>
     </div>
     
