--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    <h1>CHECK HERE FOR THE REMAINING TIME.</h1>
+    <h1 class="check">CHECK HERE FOR THE REMAINING TIME.<h1>
+    <div class="how">
     <p><a href="./assets/christmas.html">CHRISTMAS</a></p>
     <p><a href="./assets/newyear.html">NEW YEAR</a></p>
+</div>
 </body>
 </html>
