--- a/assets/newyear.html
+++ b/assets/newyear.html
@@ -33,8 +33,8 @@
     </div>
     <div class="container">
       <div class="content">
-        <i class="fas fa-home"><a href="../home.html"></i></a>
-        <p><a href="../index.html">HOME</a></p>
+        <a href="../home.html"><i class="fas fa-home"></i></a>
+        <p>HOME</p>
       </div>
     </div>
     
