--- a/assets/christmas.html
+++ b/assets/christmas.html
@@ -34,7 +34,7 @@
     </div>
     <div class="container">
       <div class="content">
-        <a href="../home.html"><i class="fas fa-home"></i></a>
+        <a href="../index.html"><i class="fas fa-home"></i></a>
         <p>HOME</p>
       </div>
     </div>
